req user id for search to filter out self + added more relation types